# delivery-system

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  deploy-prod.ps1  deploy.py  destroy-prod.ps1  destroy.py  docker-compose.load.yml  docker-compose.yml  env-template  main.py  pyproject.toml  requirements.txt  seed_postgres.py  simulator.py  test_api.py  trabalho.txt
admin/: Dockerfile  main.py  pyproject.toml
api/: models.py  routes.py
clients/: Dockerfile  main.py  pyproject.toml
couriers/: Dockerfile  main.py  pyproject.toml
database/: __init__.py  connection.py  create_graph.py  dynamo_table.py  models.py
deploy/: config.py  deploy_dynamodb.py  deploy_ecr.py  deploy_ecs.py  deploy_rds.py  deploy_vpc.py
docs/: not_relational_schema.json  report.typ
dynamo/: __init__.py  courier_routes.py  table.py
infra/k8s/admin/: admin.yaml  namespace.yaml  service-local.yaml  service-prod.yaml
infra/k8s/city/: clients.yaml  couriers.yaml  matching.yaml  namespace-template.yaml  orders.yaml  restaurants.yaml  service-local.yaml  service-prod.yaml
infra/sql/: ddl.sql
infra/terraform/: main.tf  variables.tf
infra/terraform/aws/: main.tf  variables.tf
infra/terraform/dev/: local.tfvars  main.tf
infra/terraform/environments/: local.tfvars
infranova/: compute.py  config.py  databases.py  network.py
matching/: .dockerignore  Dockerfile  main.py  pyproject.toml
orders/: Dockerfile  main.py  pyproject.toml
positions/: Dockerfile  pyproject.toml
positions/src/: consumer.py  main.py
restaurants/: Dockerfile  main.py  pyproject.toml
restaurants/routes/: kitchen.py  restaurants.py
routes/: __init__.py  courier.py  delivery.py  item.py  kitchen.py  order.py  restaurant.py  restaurants.py  user.py
scripts/: api.js  pubsub.js
setup-destroy/: destroy.ps1  setup.ps1
shared/: pyproject.toml
shared/database/: __init__.py  connection.py  create_graph.py  dynamo_table.py  models.py
shared/database/sql/: DDL.sql  DROP.sql
simulator/: load_simulator.py  prepare_data.py
test/e2e/: conftest.py  test_e2e.db  test_routes_e2e.py
utils/: aws_credentials.py  cheapest_path.py  tools.py
(+27 files in other folders)
