[project]
name = "delivery-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.83",
    "fastapi[standard]>=0.135.3",
    "geopandas>=1.1.3",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "paramiko>=4.0.0",
    "sqlmodel>=0.0.37",
]
