[project]
name = "delivery-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "boto3==1.42.82",
    "botocore==1.42.82",
    "cffi==2.0.0",
    "cryptography==46.0.6",
    "dotenv==0.9.9",
    "fastapi[standard]>=0.135.3",
    "geopandas>=1.1.3",
    "greenlet==3.3.2",
    "invoke==2.2.1",
    "jmespath==1.1.0",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "osmnx>=2.1.0",
    "pandas>=3.0.2",
    "paramiko==4.0.0",
    "psycopg2-binary>=2.9.11",
    "pycparser==3.0",
    "pynacl==1.6.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytest>=8.4.2",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "sqlalchemy>=2.0.49",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
]
[tool.pytest.ini_options]
pythonpath = ["."]
