[project]
name = "restaurants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.18",
    "fastapi>=0.136.3",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
    "shared",
    "dotenv>=0.9.9",
    "pydantic>=2.13.4",
    "psycopg2-binary>=2.9",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }
