[project]
name = "shared"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.18",
    "botocore>=1.43.18",
    "dotenv>=0.9.9",
    "osmnx>=2.1.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.13.4",
    "sqlalchemy>=2.0.50",
]
